add - layout home page finished

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -72,6 +72,11 @@ body {
   * {
     @apply border-border;
   }
+
+  html {
+    scroll-behavior: smooth;
+  }
+
   body {
     @apply bg-background text-foreground;
   }
